임포트 최적화 테스트 유틸 수정